feat: add disposition (inline|attachment) to render requests
